syntax = "proto3";

package ai.lzy.v1.channel;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/channel/channel.proto";

option java_outer_classname = "LCMS";
option java_package = "ai.lzy.v1.channel";

service LzyChannelManager {
  rpc Create (ChannelCreateRequest) returns (ChannelCreateResponse); // wf-service
  rpc Destroy (ChannelDestroyRequest) returns (ChannelDestroyResponse); // wf-service
  rpc DestroyAll (ChannelDestroyAllRequest) returns (ChannelDestroyAllResponse); // wf-service
  rpc Status (ChannelStatusRequest) returns (ChannelStatus); // wf-service
  rpc StatusAll (ChannelStatusAllRequest) returns (ChannelStatusList); // wf-service
  rpc Bind (SlotAttach) returns (SlotAttachStatus); // worker with user permissions
  rpc Unbind (SlotDetach) returns (SlotDetachStatus); // worker with user permissions
}

message ChannelCreateRequest {
  ChannelSpec channelSpec = 1;
  string workflowId = 2;
}

message ChannelCreateResponse {
  string channelId = 1;
}

message ChannelDestroyRequest {
  string channelId = 1;
}

message ChannelDestroyResponse {}

message ChannelDestroyAllRequest {
  string workflow_id = 1;
}

message ChannelDestroyAllResponse {}

message ChannelStatusRequest {
  string channelId = 1;
}

message ChannelStatus {
  ChannelSpec channelSpec = 1;
  repeated SlotStatus connected = 2;
  string channelId = 3;
}

message ChannelStatusAllRequest {
  string workflow_id = 1;
}

message ChannelStatusList {
  repeated ChannelStatus statuses = 1;
}

message SlotAttach {
  SlotInstance slotInstance = 1;
}

message SlotAttachStatus {}

message SlotDetach {
  SlotInstance slotInstance = 1;
}

message SlotDetachStatus {}
